--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/header.html"></include>
     <include src="./partials/main-page-cards.html"></include>
+    <include src="./partials/modalFilmInfo.html"></include>
 
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
