--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/main-page-cards.html"></include>
     <include src="./partials/modalFilmInfo.html"></include>
+    <include src="./partials/pagination.html"></include>
     <include src="./partials/footer.html"></include>
 
 
