--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/header.html"></include>
     <include src="./partials/main-page-cards.html"></include>
+    <include src="./partials/spinner.html"></include>
     <include src="./partials/modalFilmInfo.html"></include>
     <include src="./partials/footer.html"></include>
 
