--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     <include src="./partials/main-page-cards.html"></include>
     <include src="./partials/spinner.html"></include>
     <include src="./partials/modalFilmInfo.html"></include>
+    <include src="./partials/pagination.html"></include>
     <include src="./partials/footer.html"></include>
 
 
